<resources>
    <string name="app_name">MelbIcon</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="tab_text_1">Specials</string>
    <string name="tab_text_2">Starters</string>
    <string name="tab_text_3">Mains</string>
    <string name="tab_text_4">Sides</string>
    <string name="tab_text_5">Dessert</string>
    <string name="tab_text_6">Drinks</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="orderMore" />
    <string name="checkStatus" />
    <string name="requestAssistance" />
    <string name="finaliseBill" />
    <string name="title_activity_wait_screen" />
    <string name="andrpay" />
    <string name="paypal" />
    <string name="visa" />
    <string name="cash" />
    <string name="backButton" />
    <string name="title_activity_payment" />
    <string name="table">ORDER STATUS</string>
    <string name="back_button" />
    <string name="title_activity_status_view" />
    <string name="homebutton">homeButton</string>
    <string name="vieworderbutton">viewOrderButton</string>
    <string name="assistantbutton">assistantButton</string>
</resources>
